Moved javascript to script.js.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        function getComputerChoice(){
-            choices = ["Rock", "Paper", "Scissors"]
-            randInt = Math.random() * 3
-        }
-    </script>
+    <script src="script.js"></script>
 </head>
 <body>
     
