Added style.css, Added three buttons to HTML, added click event listener to 3 buttons and changed computerSelection and playerSelection with computerChoice and playerChoice.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="buttons">
+            <button data class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
