--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <button class="paper">Paper</button>
             <button class="scissors">Scissors</button>
         </div>
+        <div class="results">
+            <p class="result"></p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
