Added logic to check for winner.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <div class="results">
             <p class="result"></p>
         </div>
+        <div class="score">
+            <h3>Player Score</h3>
+            <span class="player-score"></span>
+            <h3>Computer Score</h3>
+            <span class="computer-score"></span>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
