Added winning logic. Once a the user or computer wins a popup will show the winner.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="score">
             <h3>Player Score</h3>
-            <span class="player-score"></span>
+            <span class="player-score">0</span>
             <h3>Computer Score</h3>
-            <span class="computer-score"></span>
+            <span class="computer-score">0</span>
         </div>
     </div>
     <script src="script.js"></script>
