Added showGameWinner() to handle showing the winner of a game.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="container">
+        <div class="results">
+            <p class="result"></p>
+            <button class="play-again">Play again</button>
+        </div>
         <div class="buttons">
             <button data class="rock">Rock</button>
             <button class="paper">Paper</button>
             <button class="scissors">Scissors</button>
-        </div>
-        <div class="results">
-            <p class="result"></p>
         </div>
         <div class="score">
             <h3>Player Score</h3>
