Theme change to 'Apple Banana Churro'.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Banana Churro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
+        <div class="header">
+            <h1>Apple Banana Churro</h1>
+        </div>
         <div class="results">
             <p class="result"></p>
             <button class="play-again">Play again</button>
@@ -23,6 +26,7 @@
             <h3>Computer Score</h3>
             <span class="computer-score">0</span>
         </div>
+        <div class="footer"></div>
     </div>
     <script src="script.js"></script>
 </body>
