Added header, body and footer. Added header styling.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,28 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Apple Banana Churro</h1>
+            <h1>
+                <span id="apple">Apple</span> 
+                <span id="banana">Banana</span>
+                <span id="churro">Churro</span> 
+            </h1>
         </div>
-        <div class="results">
-            <p class="result"></p>
-            <button class="play-again">Play again</button>
-        </div>
-        <div class="buttons">
-            <button data class="rock">Rock</button>
-            <button class="paper">Paper</button>
-            <button class="scissors">Scissors</button>
-        </div>
-        <div class="score">
-            <h3>Player Score</h3>
-            <span class="player-score">0</span>
-            <h3>Computer Score</h3>
-            <span class="computer-score">0</span>
+        <div class="header">
+            <div class="results">
+                <p class="result"></p>
+                <button class="play-again">Play again</button>
+            </div>
+            <div class="buttons">
+                <button data class="apple">Apple</button>
+                <button class="banana">Banana</button>
+                <button class="churro">Churro</button>
+            </div>
+            <div class="score">
+                <h3>Player Score</h3>
+                <span class="player-score">0</span>
+                <h3>Computer Score</h3>
+                <span class="computer-score">0</span>
+            </div>
         </div>
         <div class="footer"></div>
     </div>
