Added more styling to header.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span id="churro">Churro</span> 
             </h1>
         </div>
-        <div class="header">
+        <div class="body">
             <div class="results">
                 <p class="result"></p>
                 <button class="play-again">Play again</button>
