Added some styling to results section.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="body">
             <div class="results">
+                <h3>Welcome to Apple Banana Churro</h3>
                 <p class="result"></p>
                 <button class="play-again">Play again</button>
             </div>
