Changed the result container to have results dynamically added via js. Script.js now creates the result and play again button and appends it to result-container.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             </h1>
         </div>
         <div class="body">
-            <div class="results">
+            <div class="result-container">
                 <h3>Welcome to Apple Banana Churro</h3>
-                <p class="result"></p>
-                <button class="play-again">Play again</button>
+                <!-- <button class="play-again">Play again</button> -->
             </div>
             <div class="buttons">
                 <button data class="apple">Apple</button>
