Added some styling to center body.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,23 @@
         <div class="body">
             <div class="result-container">
                 <h3>Welcome to Apple Banana Churro</h3>
-                <!-- <button class="play-again">Play again</button> -->
+            </div>
+            <div class="score">
+                <h3>
+                    Player Score
+                    <div class="player-score">0</div>
+                </h3>
+                
+                <h3>
+                    Computer Score
+                    <div class="computer-score">0</div>
+                </h3>
+                
             </div>
             <div class="buttons">
                 <button data class="apple">Apple</button>
                 <button class="banana">Banana</button>
                 <button class="churro">Churro</button>
-            </div>
-            <div class="score">
-                <h3>Player Score</h3>
-                <span class="player-score">0</span>
-                <h3>Computer Score</h3>
-                <span class="computer-score">0</span>
             </div>
         </div>
         <div class="footer"></div>
