Added new logic to show game winner. Get winner now shows the winner expression and it gets passed to showWinner().

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="body">
             <div class="result-container">
-                <h3>Welcome to Apple Banana Churro</h3>
+                <h3 class="welcome">Welcome to Apple Banana Churro</h3>
             </div>
             <div class="score">
                 <h3>
@@ -32,9 +32,9 @@
                 
             </div>
             <div class="buttons">
-                <button data class="apple">Apple</button>
-                <button class="banana">Banana</button>
-                <button class="churro">Churro</button>
+                <button class="choice apple">Apple</button>
+                <button class="choice banana">Banana</button>
+                <button class="choice churro">Churro</button>
             </div>
         </div>
         <div class="footer"></div>
