reset(): reset added, allowing the user to play another game when play again is clicked.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <button class="choice churro">Churro</button>
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <button class="test">Hello</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
