--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 
             </div>
             <div class="buttons">
-                <button class="choice apple">Apple</button>
-                <button class="choice banana">Banana</button>
-                <button class="choice churro">Churro</button>
+                <button id="apple-btn" class="choice"><img class="apple" src="./images/apple.png" alt="Red Apple"></button>
+                <button id="banana-btn" class="choice"><img class="banana" src="./images/banana.png" alt="Banana"></button>
+                <button id="churro-btn" class="choice"><img class="churro" src="./images/churros.jpeg" alt="Churros in a blue bowl"></button>
             </div>
         </div>
         <div class="footer"></div>
