Added a footer. Added styliing to result-container.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         </div>
         <div class="body">
             <div class="result-container">
-                <h3 class="welcome">Welcome to Apple Banana Churro</h3>
+                <div class="welcome">
+                    <h3>Welcome to Apple Banana Churro</h3>
+                    <h3>Pick your food!</h3>
+                </div>
             </div>
             <div class="score">
                 <h3>
@@ -37,7 +40,11 @@
                 <button id="churro-btn" class="choice"><img class="churro" src="./images/churros.jpeg" alt="Churros in a blue bowl"></button>
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="signature">
+                By Jerry Hara
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
