Changed churro image.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="buttons">
                 <button id="apple-btn" class="choice"><img class="apple" src="./images/apple.png" alt="Red Apple"></button>
                 <button id="banana-btn" class="choice"><img class="banana" src="./images/banana.png" alt="Banana"></button>
-                <button id="churro-btn" class="choice"><img class="churro" src="./images/churros.jpeg" alt="Churros in a blue bowl"></button>
+                <button id="churro-btn" class="choice"><img class="churro" src="./images/churros.png" alt="Churro with chocolate on the end"></button>
             </div>
         </div>
         <div class="footer">
