Changed body styling. Added hover grow on choices/buttons. Changed reference to player from player to you/your.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="score">
                 <h3>
-                    Player Score
+                    Your Score
                     <div class="player-score">0</div>
                 </h3>
                 
@@ -35,9 +35,9 @@
                 
             </div>
             <div class="buttons">
-                <button id="apple-btn" class="choice"><img class="apple" src="./images/apple.png" alt="Red Apple"></button>
-                <button id="banana-btn" class="choice"><img class="banana" src="./images/banana.png" alt="Banana"></button>
-                <button id="churro-btn" class="choice"><img class="churro" src="./images/churros.png" alt="Churro with chocolate on the end"></button>
+                <button id="apple-btn" class="choice grow"><img class="apple" src="./images/apple.png" alt="Red Apple"></button>
+                <button id="banana-btn" class="choice grow"><img class="banana" src="./images/banana.png" alt="Banana"></button>
+                <button id="churro-btn" class="choice grow"><img class="churro" src="./images/churros.png" alt="Churro with chocolate on the end"></button>
             </div>
         </div>
         <div class="footer">
