Added styling to welcome.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="result-container">
                 <div class="welcome">
                     <h3>Welcome to Apple Banana Churro</h3>
-                    <h3>Pick your food!</h3>
+                    <div id="pick-food">Pick your food!</div>
                 </div>
             </div>
             <div class="score">
