Added a tracker section in the HTML. It shows users what choices they made as well as the computer.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
                 <button id="banana-btn" class="choice grow"><img class="banana" src="./images/banana.png" alt="Banana"></button>
                 <button id="churro-btn" class="choice grow"><img class="churro" src="./images/churros.png" alt="Churro with chocolate on the end"></button>
             </div>
+            <div class="tracker">
+                <div class="player-tracker">
+                    
+                </div>
+                <div class="computer-tracker">
+
+                </div>
+            </div>
         </div>
         <div class="footer">
             <div class="signature">
